@@ -1,7 +1,9 @@
+set MC_USER="`id | sed 's/[^(]*(//;s/).*//'`"
+
 if ($?TMPDIR) then
-	setenv MC_PWD_FILE $TMPDIR/mc-$USER/mc.pwd.$$
+	setenv MC_PWD_FILE $TMPDIR/mc-$MC_USER/mc.pwd.$$
 else
-	setenv MC_PWD_FILE /tmp/mc-$USER/mc.pwd.$$
+	setenv MC_PWD_FILE /tmp/mc-$MC_USER/mc.pwd.$$
 endif
 
 @bindir@/mc -P "$MC_PWD_FILE" $*
